# image-scaling-attacks

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  app.py  pillow_downsampler.py  sanitizer.py
backend/adversarial_generators/: __init__.py  bicubic_gen_payload.py  bilinear_gen_payload.py  nearest_gen_payload.py
backend/downsamplers/: __init__.py  base.py  opencv_downsampler.py  tensorflow_downsampler.py
frontend/: index.html  script.js  styles.css
tests/: test_backend_app.py  test_bicubic_gen_payload.py  test_nearest_gen_payload.py
